@@ -1,14 +1,23 @@
 -- Author      : Kurapica
 -- Create Date : 2012/07/12
 -- Change Log  :
+--               2013/06/08 Make sure the object will be hidden
 
 -- Check Version
-local version = 1
+local version = 2
 if not IGAS:NewAddon("IGAS.Widget.Unit.IFResurrect", version) then
 	return
 end
 
-_All = "all"
+-- The resurrect check
+_RESURRECT_CHECKTIME = 2
+_Resurrect_CheckThread = _Resurrect_CheckThread or setmetatable({}, {
+	__index = function (self, unit)
+		rawset(self, unit, Threading.Thread())
+		return rawget(self, unit)
+	end,
+})
+
 _IFResurrectUnitList = _IFResurrectUnitList or UnitList(_Name)
 
 function _IFResurrectUnitList:OnUnitListChanged()
@@ -17,8 +26,32 @@ function _IFResurrectUnitList:OnUnitListChanged()
 	self.OnUnitListChanged = nil
 end
 
+function checkUnitForResurrect(unit)
+	if UnitHasIncomingResurrection(unit) then
+		_IFResurrectUnitList:EachK(unit, "Visible", true)
+
+		-- Some times the resurrect event don't come when the target select resurrect to the tomb
+		local thread = _Resurrect_CheckThread[unit]
+
+		if thread.IsDead() then
+			thread.Thread = function()
+				while UnitHasIncomingResurrection(unit) do
+					Threading.Sleep(_RESURRECT_CHECKTIME)
+				end
+
+				_IFResurrectUnitList:EachK(unit, "Visible", false)
+			end
+
+			-- Start the watcher
+			thread()
+		end
+	else
+		_IFResurrectUnitList:EachK(unit, "Visible", false)
+	end
+end
+
 function _IFResurrectUnitList:ParseEvent(event)
-	self:EachK(_All, "Refresh")
+	self:Each(checkUnitForResurrect)
 end
 
 interface "IFResurrect"
@@ -55,6 +88,9 @@ interface "IFResurrect"
 	------------------------------------------------------
 	-- Event Handler
 	------------------------------------------------------
+	local function OnUnitChanged(self)
+		_IFResurrectUnitList[self] = self.Unit
+	end
 
 	------------------------------------------------------
 	-- Dispose
@@ -67,7 +103,7 @@ interface "IFResurrect"
 	-- Constructor
 	------------------------------------------------------
 	function IFResurrect(self)
-		_IFResurrectUnitList[self] = _All
+		self.OnUnitChanged = self.OnUnitChanged + OnUnitChanged
 
 		-- Default Texture
 		if self:IsClass(Texture) then
